--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,7 @@ LDFLAGS = -L/opt/homebrew/lib -lgmp #added this
 BIN    = ../bin
 CC     = gcc
 
-all:	stable mclass periodic derivatives# traj
+all:	stable mclass periodic RecurrentOrbit derivatives# traj
 
 stable:	stable.o k3.o ps.o 
 	${CC} stable.o k3.o ps.o -lm -o ${BIN}/stable
@@ -14,6 +14,9 @@ mclass: mclass.o k3.o ps.o
 
 periodic: periodic.o k3.o ps.o 
 	${CC} periodic.o k3.o ps.o ${LDFLAGS} -lm -o ${BIN}/periodic
+
+RecurrentOrbit: RecurrentOrbit.o k3.o ps.o 
+	${CC} RecurrentOrbit.o k3.o ps.o ${LDFLAGS} -lm -o ${BIN}/RecurrentOrbit
 	
 derivatives: derivatives.o k3.o ps.o 
 	${CC} derivatives.o k3.o ps.o -lm -o ${BIN}/derivatives
