--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,7 @@ LDFLAGS = -L/opt/homebrew/lib -lmpfr -lgmp #-lmpfr -lgmp used for precision calc
 BIN    = ../bin
 CC     = gcc
 
-all:	periodic periodicExact derivatives derivativesExact paths mclass
+all:	periodic periodicExact derivatives derivativesExact arcs mclass
 
 periodic: periodic.o k3.o ps.o 
 	${CC} periodic.o k3.o ps.o ${LDFLAGS} -lm -o ${BIN}/periodic
@@ -18,8 +18,8 @@ derivatives: derivatives.o k3.o ps.o
 derivativesExact: derivativesExact.o k3.o ps.o 
 	${CC} derivativesExact.o k3.o ps.o ${LDFLAGS} -lm -o ${BIN}/derivativesExact
 
-paths: paths.o k3.o ps.o 
-	${CC} paths.o k3.o ps.o -lm -o ${BIN}/paths
+arcs: arcs.o k3.o ps.o 
+	${CC} arcs.o k3.o ps.o -lm -o ${BIN}/arcs
 
 mclass: mclass.o k3.o ps.o 
 	${CC} mclass.o k3.o ps.o -lm -o ${BIN}/mclass
